--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         },
         "files": [
             "npds/support/helpers.php",
-            "npds/support/box.php"
+            "npds/support/box.php",
+            "npds/support/metas.php"
         ]        
     }
 }
